# SlowCompose

./: .gitignore  README.md  build.gradle.kts  config.properties  gradle.properties  settings.gradle.kts
annotation/: build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts  multidex-config.pro  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/nativeInterop/cinterop/: RichTextView.def
dependencies/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: Podfile
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: AppDelegateSwift.swift  BundleSwizzle.swift  ContentView.swift  Info.plist  Launch Screen.storyboard  iOSApp.swift  iosApp.entitlements
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Assets.xcassets/horizontal_logo.imageset/: Contents.json
iosApp/iosApp/Assets.xcassets/launchscreen_bg.imageset/: Contents.json
iosApp/iosApp/Assets.xcassets/tips_logo.imageset/: Contents.json
iosApp/iosApp/TencentMeetingSDK/Tquic.framework/: Tquic
iosApp/iosApp/TencentMeetingSDK/WeMeet.framework/: WeMeet
iosApp/iosApp/TencentMeetingSDK/crash_guard.framework/: crash_guard
iosApp/iosApp/TencentMeetingSDK/xcast.framework/: Info.plist
iosApp/iosApp/TencentMeetingSDK/xnn_media.framework/: xnn_media
mediaPlayer/: build.gradle.kts
processor/: build.gradle.kts
rust/: .gitignore  build.gradle.kts
rust/rs/hellorust/: Cargo.toml
rust/rs/hellorust-jni/: Cargo.toml
rust/rs/hellorust-native/: Cargo.toml
rust_plugin/: build.gradle.kts  settings.gradle.kts
(+192 files in other folders)
